Change in Main HTML FIle

--- a/HTMLChallenge.html
+++ b/HTMLChallenge.html
@@ -8,7 +8,8 @@
 
 <body>
   <h1>HTML Challenge</h1>
-  
+  <h2> Successfully completed the Challenges</h2>
+
   <hr>
   <a href="https://developer.mozilla.org/en-US/">Link to MDN Documents</a>
   <br>
